fixed and aligned menu bar to content

--- a/css/main.css
+++ b/css/main.css
@@ -78,7 +78,7 @@ a {
   display: flex;
   justify-content: flex-end;
   min-height: 10vh;
-  padding: 1rem 4rem 0 4rem;
+  padding: 1rem 3rem 0 3rem;
   position: relative;
 }
 
@@ -138,7 +138,7 @@ a {
   margin-top: 0.5rem;
   position: absolute;
   padding: 0.5rem 1rem 1rem 1rem;
-  right: 4rem;
+  right: 3rem;
   z-index: 99;
 }
 
